; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_ibmaem.c_aem_delete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_ibmaem.c_aem_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aem_data = type { i32, %struct.TYPE_4__*, %struct.TYPE_3__, i32, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aem_data*)* @aem_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aem_delete(%struct.aem_data* %0) #0 {
  %2 = alloca %struct.aem_data*, align 8
  store %struct.aem_data* %0, %struct.aem_data** %2, align 8
  %3 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %4 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %3, i32 0, i32 4
  %5 = call i32 @list_del(i32* %4)
  %6 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %7 = call i32 @aem_remove_sensors(%struct.aem_data* %6)
  %8 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %9 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @hwmon_device_unregister(i32 %10)
  %12 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %13 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @ipmi_destroy_user(i32 %15)
  %17 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %18 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %17, i32 0, i32 1
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = call i32 @dev_set_drvdata(i32* %20, i32* null)
  %22 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %23 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %22, i32 0, i32 1
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = call i32 @platform_device_unregister(%struct.TYPE_4__* %24)
  %26 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %27 = getelementptr inbounds %struct.aem_data, %struct.aem_data* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @aem_idr_put(i32 %28)
  %30 = load %struct.aem_data*, %struct.aem_data** %2, align 8
  %31 = call i32 @kfree(%struct.aem_data* %30)
  ret void
}

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @aem_remove_sensors(%struct.aem_data*) #1

declare dso_local i32 @hwmon_device_unregister(i32) #1

declare dso_local i32 @ipmi_destroy_user(i32) #1

declare dso_local i32 @dev_set_drvdata(i32*, i32*) #1

declare dso_local i32 @platform_device_unregister(%struct.TYPE_4__*) #1

declare dso_local i32 @aem_idr_put(i32) #1

declare dso_local i32 @kfree(%struct.aem_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
